src/test/deca/syntax/invalid/not_unaire_deuxtermes.deca
//  Description :
//           Utilisation du not unaire avec deux termes
//
// Résultat:
//no viable alternative at input '!'
//
{
    x ! y
}